# Rose

./: .gitignore  CMakeLists.txt  build.sh  download_model.sh  grant_permissions.sh  setup.sh
include/: AudioRecorder.h  AudioUtils.h  ClipboardManager.h  Constants.h  DispatchQueue.h  HotkeyMonitor.h  MenuBarUI.h  Settings.h  TextScoring.h  WhisperContext.h  WhisperProcessor.h
mac/: Info.plist  Rose.entitlements
src/: AudioRecorder.cpp  AudioUtils.cpp  ClipboardManager.mm  HotkeyMonitor.cpp  MenuBarUI.mm  Settings.cpp  TextScoring.cpp  WhisperContext.cpp  WhisperProcessor.cpp  main.cpp
tests/: test_main.cpp
